mark all wapbl I/O as BPRIO_TIMECRITICAL. this is the second part of addressing PR 46325.